# StarDecomposition

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  run-bench.sh
benchmark/: BOXPLOT_AND_RUNTIME.R  THINGI_EVALUATION.R  THINGI_EVALUATION_MAX_RESULT.R
benchmark/daz/: results.csv
benchmark/thingi10k/: results.csv
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/predicates/: predicates.h
meshes/: 65588.stl  crown.stl  object.vtk  open.vtk  simple.stl  simple_poke.stl  thumb.vtk
shader/: fs.frag  vs.vert
src/: assertion.h  bvh.h  dec_corners.cc  decompose.cc  lp.cc  lp.h  main.cc  mesh.cc  mesh.h  mesh_boundary.h  retet.cc  retet.h  sd.cc  sd.h  sd_boundary.cc  sd_boundary.h  sd_boundary_chebyshev.cc  sd_boundary_chebyshev.h  sd_boundary_lp.cc  sd_boundary_lp.h  triray.h  tritri.h  tritri_orig.h  vectorq.h  viewer.cc  viewer.h  volume_mesh.cc  volume_mesh.h
src/StarDecomposition/: bvh.h  decompose.cc  lp.cc  lp.h  mesh.cc  mesh.h  mesh_boundary.h  retet.cc  retet.h  sd.cc  sd.h  sd_boundary.cc  sd_boundary.h  sd_boundary_chebyshev.cc  sd_boundary_chebyshev.h  sd_boundary_lp.cc  sd_boundary_lp.h  triray.h  tritri.h  viewer.cc  viewer.h  volume_mesh.cc  volume_mesh.h
